# routes/contact_routes.go
@@ -13,8 +13,11 @@ func RegisterContactRoutes(router *gin.RouterGroup) {
 	{
 		contacts.POST("/", handlers.CreateContact)
 		contacts.GET("/", handlers.GetContacts)
+		contacts.POST("/import/csv", handlers.ImportContactsCSV)
+		contacts.POST("/import/json", handlers.ImportContactsJSON)
 		contacts.GET("/:id", handlers.GetContact)
 		contacts.PUT("/:id", handlers.UpdateContact)
 		contacts.DELETE("/:id", handlers.DeleteContact)
+		contacts.POST("/:id/avatar", handlers.UploadContactAvatar)
 	}
 }
